🐞 fix(API): Fix Auth API
