# api/internal/app/controllers/user.controller.go
@@ -6,6 +6,16 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// @Summary Get User Profile
+// @Description Get the profile of the currently authenticated user
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 {object} models.UserResponse
+// @Failure 401 {object} models.ErrorResponse
+// @Failure 502 {object} models.ErrorResponse
+// @Router /api/users/me [get]
 func GetMe(c *fiber.Ctx) error {
 	user := c.Locals("user").(models.UserResponse)
 
